@@ -23,7 +23,13 @@
 #include <config.h>
 #include <debug.h>
 
-/* Global variables */
+
+
+/*
+ * Global variables
+ */
+
+enum gpu_sim_kind_enum gpu_sim_kind = gpu_sim_kind_functional;
 
 char *gpu_config_file_name = "";
 int gpu_pipeline_debug_category;
