@@ -26,6 +26,11 @@
 
 /* Public variables */
 
+extern enum gpu_sim_kind_enum {
+	gpu_sim_kind_functional,
+	gpu_sim_kind_detailed
+} gpu_sim_kind;
+
 extern int gpu_num_stream_cores;
 extern int gpu_num_compute_units;
 extern int gpu_compute_unit_time_slots;
